Fixed bug #40609 (Segfaults when using more than one SoapVar in a request). (Rob, Dmitry)